--- a/webmvc/src/main/resources/static/index.html
+++ b/webmvc/src/main/resources/static/index.html
@@ -6,8 +6,8 @@
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <script src="controller.js">
-	
 </script>
+
 </head>
 <body>
 	Esta é a index
@@ -16,42 +16,11 @@
 	<a href="index.html"> Home </a> |
 	<a href="lista.html"> Lista </a> |
 	<a href="inserir.html"> Inserir </a> |
+	<a href="atualizar.html"> Atualizar </a>
 	<br>
-	<table border="1">
-	<tr>
-		<th>id</th>
-		<th>nome</th>
-		<th>data</th>
-		<th>categoria</th>
-		<th>pago</th>
-		<th>ações</th>
-	</tr>
-	<tr>
-		<td>{{manutencao.id}}</td>
-		<td>{{manutencao.nome}}</td>
-		<td>{{manutencao.data}}</td>
-		<td>{{manutencao.categoria}}</td>
-		<td>{{manutencao.pago}}</td>
-		<td>editar | excluir </td>
-	</tr>
-	
-	</table>
+
 	
 	<hr>
-	<div ng-app="myApp" ng-controller="myCtrl">
-		<form>
-			Id: <br> <input type="number" ng-model="id" readonly> <br>
-
-			Nome: <br> <input type="text" ng-model="nome" size="20"
-				placeholder="Digite o serviço"><br> Categoria: <br>
-			<input type="text" ng-model="categoria" size="20"
-				placeholder="Categoria"><br> Status:<br>
-			<input type="text" ng-model="pago" placeholder="True/False"><br>
-
-		
-			<button ng-click="salvar()">Salvar</button>
-
-		</form>
-	</div>
+	
 </body>
 </html>
